Fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ body {
 }
 
 .icons {
-    height: 27vh;
+    height: 25vh;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -252,8 +252,8 @@ body {
 .icons div {
     background-color: #00D0FF;
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
+    height: 10vh;
+    width: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -334,8 +334,8 @@ body {
 }
 
 .gokuReaction {
-    height: 200px;
-    width: 200px;
+    height: 24vh;
+    width: 24vh;
     background-image: url(gokugif.gif);
     background-size: cover;
     background-position: 35%;
@@ -343,8 +343,8 @@ body {
 }
 
 .vegetaReaction {
-    height: 200px;
-    width: 200px;
+    height: 24vh;
+    width: 24vh;
     background-image: url(vegetagif.gif);
     background-size: cover;
     background-position: 50%;
@@ -353,8 +353,8 @@ body {
 
 .gokuReaction div,
 .vegetaReaction div {
-    height: 200px;
-    width: 200px;
+    height: 24vh;
+    width: 24vh;
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.264);
     display: flex;
